--- a/package.json
+++ b/package.json
@@ -1,23 +1,34 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "play14",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "#play14 community website",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Cédric Pontet <cedric@play14.org>",
   "dependencies": {
+    "@loadable/component": "^5.14.1",
     "gatsby": "^3.3.1",
+    "gatsby-image": "^3.2.0",
     "gatsby-plugin-gatsby-cloud": "^2.2.0",
+    "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-image": "^1.2.1",
     "gatsby-plugin-manifest": "^3.2.0",
     "gatsby-plugin-offline": "^4.2.0",
     "gatsby-plugin-react-helmet": "^4.2.0",
     "gatsby-plugin-sharp": "^3.2.1",
     "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-source-strapi": "^0.0.12",
     "gatsby-transformer-sharp": "^3.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-accessible-accordion": "^3.3.3",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-image-lightbox": "^5.1.1",
+    "react-markdown": "^5.0.3",
+    "react-modal-video": "^1.2.6",
+    "react-owl-carousel3": "^2.2.5",
+    "react-wow": "^1.0.0",
+    "recoil": "^0.2.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
