--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-source-filesystem": "^3.2.0",
     "gatsby-source-strapi": "^0.0.12",
     "gatsby-transformer-sharp": "^3.2.0",
+    "moment-timezone": "^0.5.33",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-accessible-accordion": "^3.3.3",
@@ -26,6 +27,7 @@
     "react-image-lightbox": "^5.1.1",
     "react-markdown": "^5.0.3",
     "react-modal-video": "^1.2.6",
+    "react-moment": "^1.1.1",
     "react-owl-carousel3": "^2.2.5",
     "react-wow": "^1.0.0",
     "recoil": "^0.2.0"
