--- a/package.json
+++ b/package.json
@@ -33,15 +33,14 @@
     "recoil": "^0.2.0"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
     "prettier": "2.2.1"
   },
   "keywords": [
     "gatsby"
   ],
   "scripts": {
-    "build": "gatsby build",
-    "develop": "cross-env GATSBY_GRAPHQL_IDE=playground gatsby develop",
+    "build": "set GATSBY_ENV=production && gatsby build",
+    "develop": "set GATSBY_ENV=development && gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
