--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "gatsby-plugin-manifest": "^3.2.0",
     "gatsby-plugin-offline": "^4.2.0",
     "gatsby-plugin-react-helmet": "^4.2.0",
-    "gatsby-plugin-sharp": "^3.2.1",
+    "gatsby-plugin-sharp": "^3.4.2",
     "gatsby-source-filesystem": "^3.2.0",
     "gatsby-source-strapi": "^0.0.12",
-    "gatsby-transformer-sharp": "^3.2.0",
+    "gatsby-transformer-sharp": "^3.4.0",
     "markdown-to-jsx": "^7.1.2",
     "moment-timezone": "^0.5.33",
     "prop-types": "^15.7.2",
@@ -45,7 +45,8 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "token": "gatsby-source-google-photos-token"
   },
   "repository": {
     "type": "git",
