--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-offline": "^4.2.0",
     "gatsby-plugin-react-helmet": "^4.2.0",
     "gatsby-plugin-resolve-src": "^2.1.0",
+    "gatsby-plugin-sass": "^4.5.0",
     "gatsby-plugin-sharp": "^3.4.2",
     "gatsby-source-filesystem": "^3.2.0",
     "gatsby-source-strapi": "^0.0.12",
@@ -33,7 +34,8 @@
     "react-moment": "^1.1.1",
     "react-owl-carousel3": "^2.2.5",
     "react-wow": "^1.0.0",
-    "recoil": "^0.2.0"
+    "recoil": "^0.2.0",
+    "sass": "^1.32.13"
   },
   "devDependencies": {
     "prettier": "2.2.1"
